--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,6 @@
 # Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
+run-name: ${{ github.actor }} Deploy static content to Pages 🚀
 
 on:
   # Runs on pushes targeting the default branch
